# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "haproxy-operator-monorepo"
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"

[dependency-groups]
fmt = [ "ruff" ]
lint = [
  "codespell",
  "jinja2==3.1.6",
  "jubilant==1.6.2",
  "mypy",
  "ops[testing]",
  "pep8-naming",
  "pytest",
  "pytest-asyncio",
  "pytest-operator",
  "requests",
  "ruff",
  "snowballstemmer<4",
  "types-pyyaml",
  "types-requests",
]
integration = [
  "allure-pytest>=2.8.18",
  "allure-pytest-collection-report @ git+https://github.com/canonical/data-platform-workflows@v24.0.0#subdirectory=python/pytest_plugins/allure_pytest_collection_report",
  "httpx[http2]==0.28.1",
  "jinja2==3.1.6",
  "jubilant==1.6.2",
  "juju==3.6.1.3",
  "protobuf==6.33.2",
  "playwright==1.57.0",
  "pytest",
  "pytest-asyncio",
  "pytest-operator",
  "websockets<16",
]

[tool.uv]
package = false

[tool.codespell]
skip = "haproxy-operator"
