[project]
name = "haproxy-route-policy"
version = "0.1.0"
description = "Django REST API for managing HAProxy routing policies."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.16.1",
    "validators>=0.35.0",
]

[dependency-groups]
lint = [
    "codespell>=2.4.2",
    "django-stubs>=6.0.0",
    "django-types>=0.23.0",
    "djangorestframework-stubs>=3.16.8",
    "djangorestframework-types>=0.9.0",
    "mypy>=1.19.1",
    "ruff>=0.15.6",
]
